--- a/pillar.example
+++ b/pillar.example
@@ -97,26 +97,11 @@ airflow:
   pkg:
     airflow:
       version: 2.0.0  # 1.10.14
-      use_upstream: pip
-      # "extras" are installed via 'pip install apache-airflow[extras,]==version'
-      # "providers" are installed via 'pip install [providers,]'
-      # If you want airflow.providers instead, set empty dict (extras: {}) here
-      # and run that state by itself, on-demand. See providers dict.
       extras:
         # https://airflow.apache.org/docs/apache-airflow/stable/installation.html#extra-packages
-        # NOT VERIFIED OR "I HAD ISSUES WITH THESE!"
-        # all            # All Airflow features known to man    # NOT VERIFIED
-        # all_dbs        # All databases integrations    # NOT VERIFIED
-        # devel_all      # All dev tools requirements    # NOT VERIFIED
-        # devel_hadoop   # Airflow + dependencies on the Hadoop stack    # NOT VERIFIED
-        # doc            # Packages needed to build docs    # NOT VERIFIED
-        # cloudant       # cloudant
-        # salesforce     # Salesforce hook
-        # snowflake      # Snowflake hooks and operators
-        # oracle         # Oracle hooks and operators
-        # jdbc           # JDBC hooks and operators
-        
-        # THESE WORKED
+
+        # THIS SECTION NEEDS CLEANUP SOMETIME #
+
         - devel          # Minimum dev tools requirements
         - devel_ci       # Development requirements used in CI
         - devel_azure    # Azure development requirements
@@ -128,13 +113,7 @@ airflow:
         - apache.hive       # All Hive related operators
         - apache.pinot         # Pinot DB hook
         - webhdfs           # HDFS hooks and operators
-        # apache.presto     # All Presto related operators & hooks   (not in airflow 2.0.0)
         - amazon               # aws
-        # azure_container_instances   # not in airflow 2.0.0
-        # azure_blob_storage   # not in airflow 2.0.0
-        # azure_cosmos         # not in airflow 2.0.0
-        # azure_data_lake      # not in airflow 2.0.0
-        # azure_secrets        # not in airflow 2.0.0
         - microsoft.azure      # azure
         - databricks           # Databricks hooks and operators
         - datadog              # Datadog hooks and sensors
@@ -151,6 +130,7 @@ airflow:
         - sentry
         - slack                # airflow.providers.slack.operators.slack.SlackAPIOperator
         - vertica              # Vertica hook support as an Airflow backend
+
         ## Software
         - async                # Async worker classes for Gunicorn
         - celery               # CeleryExecutor
@@ -176,6 +156,7 @@ airflow:
         - ssh                  # SSH hooks and Operator
         - pagerduty            # PagerDuty ..
         - microsoft.winrm      # WinRM hooks and operators
+
       providers:
         - apache-airflow-providers-apache-cassandra
         - apache-airflow-providers-apache-druid
