--- a/airflow/defaults.yaml
+++ b/airflow/defaults.yaml
@@ -32,14 +32,17 @@ airflow:
 
       flask:
         auth_type: AUTH_DB
-        auth_user_registration_role: Admin
         app_theme: null # use default
 
-        ##### These four are verifed with Active Directory ####
+        ##### These are verifed with Active Directory ####
         auth_ldap_server: ldap://ldapserver.new
         auth_ldap_search_filter: (memberOf=CN=myGrp,OU=myOrg,DC=example,DC=com)
         auth_ldap_append_domain: example.com
         auth_ldap_search: DC=example,DC=com
+        auth_user_registration: True
+
+        ## Admin is initially ok for 'admins', but change to Viewer for everyone else
+        auth_user_registration_role: Admin
 
       content:
         api: {}
