--- a/pillar.example
+++ b/pillar.example
@@ -21,7 +21,58 @@ postgres:
     - ['local', 'replication', 'all', 'peer']
     - ['host', 'replication', 'all', '127.0.0.1/32', 'md5']
     - ['host', 'replication', 'all', '::1/128', 'md5']
+---
+rabbitmq:
+  vhost:
+    - /airflow
+  user:
+    airflow:
+      - password: airflow
+      - force: true
+      - tags: administrator
+      - perms:
+          - '/airflow':
+              - '.*'
+              - '.*'
+              - '.*'
+      - runas: root
+  queue:
+    airflow:
+      - user: airflow
+      - passwd: airflow
+      - durable: true
+      - auto_delete: false
+      - vhost: /airflow
+      - arguments:
+          - 'x-message-ttl': 8640000
+          - 'x-expires': 8640000
+          - 'x-dead-letter-exchange': '/airflow'
+  binding:
+    airflow:
+      - destination_type: queue
+      - destination: airflow
+      - routing_key: airflow_routing_key
+      - user: airflow
+      - passwd: password
+      - vhost: /airflow
+      - arguments:
+          - 'x-message-ttl': 8640000
+  exchange:
+    airflow:
+      - user: airflow
+      - passwd: airflow
+      - type: fanout
+      - durable: true
+      - internal: false
+      - auto_delete: false
+      - vhost: /airflow
+      - arguments:
+          - 'alternate-**exchange': 'amq.fanout'
+          - 'test-header': 'testing'
+  policy: {}
+  upstream: {}
 
+---
 airflow:
   identity:
     airflow:
@@ -55,8 +106,11 @@ airflow:
         celery_kubernetes_executor: {}
         celery:
           # https://docs.celeryproject.org/en/v5.0.2/getting-started/brokers
-          broker_url: redis://127.0.0.1:6379/0
+          default_queue: /airflow
+          broker_url: amqp://rabbit:rabbit@127.0.0.1:5672/airflow
+          # broker_url: redis://127.0.0.1:6379/0
           result_backend: db+postgresql://airflow:airflow@127.0.0.1/airflow
+
         cli: {}
         core:
           authentication: True  # gone in v2
@@ -68,17 +122,6 @@ airflow:
           # https://stackoverflow.com/questions/45455342
           sql_alchemy_conn: postgresql+psycopg2://airflow:airflow@127.0.0.1/airflow
           security: ''
-        dask: {}
-        elasticsearch: {}
-        kerberos: {}
-        kubernetes: {}
-        ldap: {}   # gone in v2
-        logging: {}
-        metrics: {}
-        secrets: {}
-        sentry: {}
-        smart_sensor: {}
-        smtp: {}
         webserver:
           secret_key: {{ range(1,20000000000) | random }}
       state_colors:
@@ -101,97 +144,105 @@ airflow:
         - airflow-celery-worker
   pkg:
     airflow:
-      version: 2.0.0  # 1.10.14
+      version: 2.0.1
       extras:
+        # Read these first
         # https://airflow.apache.org/docs/apache-airflow/stable/installation.html#extra-packages
+        # https://airflow.apache.org/docs/apache-airflow/stable/extra-packages-ref.html
 
-        # THIS SECTION NEEDS CLEANUP SOMETIME #
+        # Bundle Extras
 
-        - devel          # Minimum dev tools requirements
-        - devel_ci       # Development requirements used in CI
-        - devel_azure    # Azure development requirements
-        - password       # Password authentication for users
-        - apache.atlas      # Apache Atlas to use Data Lineage feature
-        - apache.cassandra  # Cassandra related operators & hook
-        - apache.druid      # Druid related operators & hooks
-        - apache.hdfs       # HDFS hooks and operators
-        - apache.hive       # All Hive related operators
-        - apache.kylin
-        - apache.livy
-        - apache.pig
-        - apache.pinot         # Pinot DB hook
-        - apache.spark
-        - apache.sqoop
-        - webhdfs           # HDFS hooks and operators
-        - amazon               # aws
-        - microsoft.azure      # azure
-        - microsoft.mssql
-        - databricks           # Databricks hooks and operators
-        - datadog              # Datadog hooks and sensors
-        - dingding
-        - discord
-        - google               # Google Cloud
-        - ftp
-        - google_auth          # Google auth backend
-        - github_enterprise    # GitHub Enterprise auth backend
-        - hashicorp            # Hashicorp Services (Vault)
-        - http                 # http hooks and providers
-        - jira                 # Jira hooks and operators
-        - qubole               # Enable QDS (Qubole Data Service) support
-        - salesforce           # Salesforce hook
-        - sendgrid             # Send email using sendgrid
-        - segment              # Segment hooks and sensors
-        - sentry
-        - slack                # airflow.providers.slack.operators.slack.SlackAPIOperator
-        - vertica              # Vertica hook support as an Airflow backend
+        # NOT VERIFIED == "I HAD ISSUES WITH THESE!"
+        # all               # All Airflow user facing features  # NOT VERIFIED
+        # all_dbs           # All database integrations  # NOT VERIFIED
+        # devel             # Minimum dev tools requirements  # NOT VERIFIED
+        # devel_hadoop      # devel + hadoop devel  # NOT VERIFIED
+        # devel_all         # Everything for development  # NOT VERIFIED
+        # devel_ci          # Development requirements used in CI
 
-        ## Software
-        - async                # Async worker classes for Gunicorn
-        - celery               # CeleryExecutor
-        - dask                 # DaskExecutor
-        - docker               # Docker hooks and operators
-        - elasticsearch        # Elasticsearch hooks and Log Handler
-        - exasol
-        - facebook
-        - cncf.kubernetes      # Kubernetes Executor and operator
-        - mongo                # Mongo hooks and operators
-        - mysql                # MySQL operators and hook, support as Airflow backend (mysql 5.6.4+)
-        - postgres             # PostgreSQL operators and hook, support as an Airflow backend
-        - rabbitmq             # RabbitMQ support as a Celery backend
-        - redis                # Redis hooks and sensors
-        - samba                # airflow.providers.apache.hive.transfers.hive_to_samba.HiveToSambaOperator
-        - statsd               # Needed by StatsD metrics
+        # Apache Software Extras
+        # apache.atlas      # Apache Atlas to use Data Lineage feature
+        # apache.beam
+        # apache.cassandra  # Cassandra related operators & hook
+        # apache.druid      # Druid related operators & hooks
+        # apache.hdfs       # HDFS hooks and operators
+        # apache.hive       # All Hive related operators
+        # apache.kylin
+        # apache.livy
+        # apache.pig
+        # apache.pinot      # Pinot DB hook
+        # apache.spark
+        # apache.sqoop
+
+        # Services Extras
+        - amazon
+        - azure
+        # databricks        # Databricks hooks and operators
+        - datadog           # Datadog hooks and sensors
+        # dask
+        # dingding
+        # discord
+        # facebook
+        - google            # Google Cloud
+        # github_enterprise # GitHub Enterprise auth backend
+        - google_auth       # Google auth backend
+        - hashicorp         # Hashicorp Services (Vault)
+        - jira              # Jira hooks and operators
+        # opsgenie
+        # pagerduty         # PagerDuty ..
+        # plexus
+        # qubole            # Enable QDS (Qubole Data Service) support
+        # salesforce        # Salesforce hook
+        - sendgrid          # Send email using sendgrid
+        # segment           # Segment hooks and sensors
+        # sentry
+        - slack             # airflow.providers.slack.operators.slack.SlackAPIOperator
+        # snowflake
+        # telegram
+        # vertica           # Vertica hook support as an Airflow backend
+        # yandex
+        # zendesk
+
+        ## Software Extras
+        # async             # Async worker classes for Gunicorn
+        - celery            # CeleryExecutor
+        - cncf.kubernetes   # Kubernetes Executor and operator
+        - docker            # Docker hooks and operators
+        - elasticsearch     # Elasticsearch hooks and Log Handler
+        # exasol
+        # jenkins
+        - ldap              # LDAP authentication for users
+        - mongo             # Mongo hooks and operators
+        - microsoft.mssql   # Microsoft SQL server
+        - mysql             # MySQL operators and hook, support as Airflow backend (mysql 5.6.4+)
+        # odbc
+        # openfaas
+        # oracle
+        - postgres          # PostgreSQL operators and hook, support as an Airflow backend
+        - password          # Password authentication for users
+        # presto
+        - rabbitmq          # RabbitMQ support as a Celery backend
+        - redis             # Redis hooks and sensors
+        - samba             # Samba hooks and operators
+        # singularity
+        - statsd            # Needed by StatsD metrics
+        # tableau
         - virtualenv
-        - cgroups              # Needed To use CgroupTaskRunner
-        - crypto               # Cryptography libraries
-        - grpc                 # Grpc hooks and operators
-        - kerberos             # Kerberos integration
-        - ldap                 # LDAP authentication for users
-        - imap                 # IMAP hooks and sensors
-        - jdbc
-        - odbc
-        - openfaas
-        - opsgenie
-        - oracle
-        - presto
-        - jenkins
-        - jira
-        - papermill            # Papermill hooks and operators
-        - plexus
-        - ssh                  # SSH hooks and Operator
+
+        ## Standard protocol Extras
+        # cgroups           # Needed To use CgroupTaskRunner
+        - ftp
+        - grpc              # Grpc hooks and operators
+        - http              # http hooks and providers
+        - imap              # IMAP hooks and sensors
+        # jdbc
+        - kerberos          # Kerberos integration
+        # papermill         # Papermill hooks and operators
         - sftp
-        - singularity
-        - pagerduty            # PagerDuty ..
-        - microsoft.winrm      # WinRM hooks and operators
-        - snowflake
         - sqlite
-        - telegram
-        - yandex
-        - zendesk
+        - ssh               # SSH hooks and Operator
+        - microsoft.winrm   # WinRM hooks and operators
 
   linux:
     altpriority: 0   # zero disables alternatives
-
-  # Just for testing purposes
-  winner: pillar
-  added_in_pillar: pillar_value
+...
