--- a/pillar.example
+++ b/pillar.example
@@ -123,7 +123,7 @@ airflow:
           sql_alchemy_conn: postgresql+psycopg2://airflow:airflow@127.0.0.1/airflow
           security: ''
         webserver:
-          secret_key: {{ range(1,20000000000) | random }}
+          secret_key: {{ range(1,2000) | random }}
       state_colors:
         # https://airflow.apache.org/docs/apache-airflow/stable/howto/customize-state-colors-ui.html
         queued: 'darkgray'
@@ -150,12 +150,13 @@ airflow:
         # https://airflow.apache.org/docs/apache-airflow/stable/extra-packages-ref.html
 
         # Services Extras
-        - amazon
-        - azure
+        - async
+        - crypto
+        - dask
         - datadog           # Datadog hooks and sensors
-        - google            # Google Cloud
-        - google_auth       # Google auth backend
-        - hashicorp         # Hashicorp Services (Vault)
+        - devel
+        - devel_ci
+        - devel_azure
         - jira              # Jira hooks and operators
         - sendgrid          # Send email using sendgrid
         - slack             # airflow.providers.slack.operators.slack.SlackAPIOperator
@@ -164,27 +165,21 @@ airflow:
         - celery            # CeleryExecutor
         - cncf.kubernetes   # Kubernetes Executor and operator
         - docker            # Docker hooks and operators
-        - elasticsearch     # Elasticsearch hooks and Log Handler
         - ldap              # LDAP authentication for users
-        - mongo             # Mongo hooks and operators
+        - microsoft.azure
         - microsoft.mssql   # Microsoft SQL server
-        - mysql             # MySQL operators and hook, support as Airflow backend (mysql 5.6.4+)
-        - postgres          # PostgreSQL operators and hook, support as an Airflow backend
-        - password          # Password authentication for users
         - rabbitmq          # RabbitMQ support as a Celery backend
         - redis             # Redis hooks and sensors
-        - samba             # Samba hooks and operators
         - statsd            # Needed by StatsD metrics
         - virtualenv
 
         ## Standard protocol Extras
         # cgroups           # Needed To use CgroupTaskRunner
-        - ftp
         - grpc              # Grpc hooks and operators
         - http              # http hooks and providers
-        - imap              # IMAP hooks and sensors
         - kerberos          # Kerberos integration
         - sftp
+        - snowflake
         - sqlite
         - ssh               # SSH hooks and Operator
         - microsoft.winrm   # WinRM hooks and operators
