docs(webserver): document webserver host/port pillars

--- a/airflow/defaults.yaml
+++ b/airflow/defaults.yaml
@@ -45,6 +45,12 @@ airflow:
         ## Admin is initially ok for 'admins', but change to Viewer for everyone else
         auth_user_registration_role: Admin
 
+        webserver:
+          # The ip specified when starting the web server
+          web_server_host: 0.0.0.0
+          # The port on which to run the web server
+          web_server_port: 8080
+
       content:
         api: {}
         celery_kubernetes_executor: {}
