--- a/pillar.example
+++ b/pillar.example
@@ -100,6 +100,11 @@ airflow:
         #### Admin is initially ok for 'admins', but change to Viewer for everyone else
         auth_user_registration_role: Admin
         auth_user_registration: True
+        webserver:
+          # The ip specified when starting the web server
+          web_server_host: 0.0.0.0
+          # The port on which to run the web server
+          web_server_port: 8080
 
       content:
         api: {}
@@ -163,6 +168,9 @@ airflow:
         - devel
         - devel_ci
         - devel_azure
+        - google            # Google Cloud
+        - google_auth       # Google auth backend
+        - hashicorp         # Hashicorp Services (Vault)
         - jira              # Jira hooks and operators
         - sendgrid          # Send email using sendgrid
         - slack             # airflow.providers.slack.operators.slack.SlackAPIOperator
@@ -171,18 +179,25 @@ airflow:
         - celery            # CeleryExecutor
         - cncf.kubernetes   # Kubernetes Executor and operator
         - docker            # Docker hooks and operators
+        - elasticsearch     # Elasticsearch hooks and Log Handler
         - ldap              # LDAP authentication for users
         - microsoft.azure
         - microsoft.mssql   # Microsoft SQL server
+        - mysql             # MySQL operators and hook, support as Airflow backend (mysql 5.6.4+)
+        - postgres          # PostgreSQL operators and hook, support as an Airflow backend
+        - password          # Password authentication for users
         - rabbitmq          # RabbitMQ support as a Celery backend
         - redis             # Redis hooks and sensors
+        - samba
         - statsd            # Needed by StatsD metrics
         - virtualenv
 
         ## Standard protocol Extras
         # cgroups           # Needed To use CgroupTaskRunner
+        - ftp
         - grpc              # Grpc hooks and operators
         - http              # http hooks and providers
+        - imap              # IMAP hooks and sensors
         - kerberos          # Kerberos integration
         - sftp
         - snowflake
