--- a/pillar.example
+++ b/pillar.example
@@ -89,24 +89,16 @@ airflow:
       flask:
         auth_type: AUTH_DB # AUTH_LDAP, etc
 
-        ---
-        '(&(objectClass=user)(sAMAccountName=*)(|(memberOf=CN=grpRole_AppSupport,OU=ouGBEEngineers,DC=GBECORP,DC=GBE,
-DC=global)(memberOf=CN=grpRole_AutoTest,OU=ouGBEEngineers,DC=GBECORP,DC=GBE,DC=global)(memberOf=CN=grpRole_Infrastructure,OU=ouGBEEngin
-eers,DC=GBECORP,DC=GBE,DC=global)(memberOf=CN=grpRole_ReleaseManagement,OU=ouGBEEngineers,DC=GBECORP,DC=GBE,DC=global)(memberOf=CN=grpR
-ole_SQLSupport,OU=ouGBEEngineers,DC=GBECORP,DC=GBE,DC=global)))'
-AUTH_LDAP_UID_FIELD = 'sAMAccountName'  # or 'userPrincipalName'
-AUTH_LDAP_SEARCH = 'OU=ouGBEEngineers,DC=GBECORP,DC=GBE,DC=global'
---
         ## Microsoft AD Example ##
         # https://flask-appbuilder.readthedocs.io/en/latest/security.html#authentication-ldap
         auth_ldap_server: ldap://ldapserver.new
         auth_ldap_append_domain: example.com
-        auth_ldap_uid_field: sAMAccountName  # or userPrincipalName
+        auth_ldap_uid_field: sAMAccountName  # or uid or userPrincipalName or ?
         auth_ldap_search: OU=ouEngineers_myteam,dc=example,dc=com
 
         ## https://confluence.atlassian.com/kb/how-to-write-ldap-search-filters-792496933.html
         auth_ldap_search_filter: (&(objectCategory=Person)(sAMAccountName=*)(|(memberOf=cn=grpRole_myteam,OU=ouEngineers_myteam,dc=example,dc=com)(memberOf=cn=grpRole_yourteam,OU=ouEngineers_yourteam,dc=example,dc=com)))
-        auth_ldap_search_filter: (memberOf=CN=myGrpRole,OU=myOrg,DC=example,DC=com)
+        # auth_ldap_search_filter: (memberOf=CN=myGrpRole,OU=myOrg,DC=example,DC=com)
 
         auth_user_registration_role: Admin    # change to 'Viewer' after post-install admin-onboarding
         auth_user_registration: True  # allow users not already in FAB DB
