--- a/airflow/defaults.yaml
+++ b/airflow/defaults.yaml
@@ -36,12 +36,13 @@ airflow:
         app_theme: null # use default
 
         ##### These are verifed with Active Directory ####
-        auth_ldap_server: ldap://ldapserver.new
+        auth_ldap_server: ldap://ldapserver.new  # must include protocol (ldap or ldaps)
         auth_ldap_append_domain: example.com
         auth_ldap_uid_field: uid
         auth_ldap_search_filter: (memberOf=CN=myGrp,OU=myOrg,DC=example,DC=com)
         auth_ldap_search: DC=example,DC=com
         auth_ldap_group_field: memberOf
+        auth_ldap_allow_self_signed: True
         auth_user_registration_role: Admin
         auth_user_registration: True
         # auth_roles_sync_at_login: True
