--- a/pillar.example
+++ b/pillar.example
@@ -91,15 +91,19 @@ airflow:
 
         ## Microsoft AD Example ##
         # https://flask-appbuilder.readthedocs.io/en/latest/security.html#authentication-ldap
-        auth_ldap_server: ldap://ldapserver.new
+        auth_ldap_server: ldap://ldapserver.new    # must include protocol (ldap or ldaps)
         auth_ldap_append_domain: example.com
         auth_ldap_uid_field: sAMAccountName  # or uid or userPrincipalName or ?
         auth_ldap_search: OU=ouEngineers_myteam,dc=example,dc=com
+        auth_ldap_group_field: memberOf
+        auth_ldap_allow_self_signed: False
 
         ## https://confluence.atlassian.com/kb/how-to-write-ldap-search-filters-792496933.html
         auth_ldap_search_filter: (&(objectCategory=Person)(sAMAccountName=*)(|(memberOf=cn=grpRole_myteam,OU=ouEngineers_myteam,dc=example,dc=com)(memberOf=cn=grpRole_yourteam,OU=ouEngineers_yourteam,dc=example,dc=com)))
         # auth_ldap_search_filter: (memberOf=CN=myGrpRole,OU=myOrg,DC=example,DC=com)
 
+        auth_roles_sync_at_login: True
+        # permanent_session_lifetime: 1800
         auth_user_registration_role: Admin    # change to 'Viewer' after post-install admin-onboarding
         auth_user_registration: True  # allow users not already in FAB DB
         webserver:
