--- a/pillar.example
+++ b/pillar.example
@@ -155,11 +155,8 @@ airflow:
     airflow:
       version: 2.1.0
           {%- if grains.osfinger == 'CentOS Linux-7' %}
-          # because centos7 defaults to python2, need to be explicit
+          # because centos7 OS default is python2, need to be explicit
       uri_c: https://raw.githubusercontent.com/apache/airflow/constraints-VERSION/constraints-3.6.txt
-      deps:
-        - python2-pip   # needed if salt was installed with python2
-        - python36-virtualenv
           {%- endif %}
       extras:
         # https://airflow.apache.org/docs/apache-airflow/stable/installation.html#extra-packages
