docs(example): update pillar.example for cluster

--- a/pillar.example
+++ b/pillar.example
@@ -23,6 +23,15 @@ postgres:
     - ['host', 'replication', 'all', '::1/128', 'md5']
 ---
 rabbitmq:
+  cluster:
+    rabbitmq@locahost:
+      user: rabbitmq
+      host: rabbitmqhost  # short hostname of node to join to, not fqdn
+      ram_node: None
+      runas: rabbitmq
+      erlang_cookie:
+        name: /var/lib/rabbitmq/.erlang_cookie
+        value: shared-value-for-all-cluster-members
   vhost:
     - /airflow
   user:
