docs(examples): update rabbitmq examples

--- a/pillar.example
+++ b/pillar.example
@@ -33,14 +33,14 @@ rabbitmq:
         name: /var/lib/rabbitmq/.erlang_cookie
         value: shared-value-for-all-cluster-members
   vhost:
-    - /airflow
+    - airflow
   user:
     airflow:
       - password: airflow
       - force: true
       - tags: administrator
       - perms:
-          - '/airflow':
+          - 'airflow':
               - '.*'
               - '.*'
               - '.*'
@@ -51,11 +51,11 @@ rabbitmq:
       - passwd: airflow
       - durable: true
       - auto_delete: false
-      - vhost: /airflow
+      - vhost: airflow
       - arguments:
           - 'x-message-ttl': 8640000
           - 'x-expires': 8640000
-          - 'x-dead-letter-exchange': '/airflow'
+          - 'x-dead-letter-exchange': 'airflow'
   binding:
     airflow:
       - destination_type: queue
@@ -63,7 +63,7 @@ rabbitmq:
       - routing_key: airflow_routing_key
       - user: airflow
       - passwd: password
-      - vhost: /airflow
+      - vhost: airflow
       - arguments:
           - 'x-message-ttl': 8640000
   exchange:
@@ -74,7 +74,7 @@ rabbitmq:
       - durable: true
       - internal: false
       - auto_delete: false
-      - vhost: /airflow
+      - vhost: airflow
       - arguments:
           - 'alternate-**exchange': 'amq.fanout'
           - 'test-header': 'testing'
@@ -124,7 +124,7 @@ airflow:
         celery_kubernetes_executor: {}
         celery:
           # https://docs.celeryproject.org/en/v5.0.2/getting-started/brokers
-          default_queue: /airflow
+          default_queue: airflow
           broker_url: amqp://airflow:airflow@127.0.0.1:5672/airflow   # port 5672 here
           # broker_url: redis://127.0.0.1:6379/0
           result_backend: db+postgresql://airflow:airflow@127.0.0.1/airflow
